<resources>
    <string name="app_name">SensGraph</string>

    <string name="sensor_name_text">Sensor Name:</string>
    <string name="sensor_value_text">Sensor Value:</string>
    <string name="sensor_name_text_place_holder">Sensor Name: Not Selected</string>
    <string name="sensor_value_text_place_holder">Sensor Value: Not Selected</string>
    <string name="sensor_url_text_place_holder">Enter URL</string>
    <string name="refresh_btn_text">ref</string>
    <string name="update_time_text">Update interval (min)</string>
    <string name="update_time_default_interval">30</string>
    <string name="just_error">Error!!!</string>
    <string name="hours_short">hr</string>

    <string name="menu_save">Save</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_help">Help</string>

    <string name="json_worker_err00">Unable to parse response from URL</string>
    <string name="json_worker_err0">Unidentified error</string>
    <string name="json_worker_err1">Unable to parse given URL</string>
    <string name="json_worker_err2">Connection timeout</string>
    <string name="json_worker_err3">Unable to connect to a given URL</string>
    <string name="json_worker_err4">Unable to convert response from URL into JSON</string>

    <string name="config_activity_error_msg_1">Update interval: can not be 0 or empty</string>
    <string name="config_activity_error_msg_2">Error parsing update interval</string>

    <string name="help_info_text_1">1. Enter URL and refresh to get JSON response</string>
    <string name="help_info_text_2">2. Select Sensor Name and Value elements from the list to display on widget</string>
    <string name="help_info_text_3">3. Press on Sensor Name or Value fields to clear selection. Symbol : separates JSON values</string>
    <string name="help_info_text_4">4. Enter update time interval in minutes</string>
    <string name="help_info_text_5">5. Press save to finnish creating the widget</string>
    <string name="help_info_text_6">6. Press on the widget to update it manually</string>

    <string name="x">X</string>

</resources>
